# minions-suite

./: .gitignore  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  projects.yaml  pyproject.toml
db/: init.sql
minions/: __main__.py  agent.py  cli.py  config.py  db.py  db_postgres.py  git_provider.py  models.py  preflight.py  project_registry.py  prompt.py  review_engine.py  server.py  tools.py
minions/connectors/: nats_client.py  nats_config.py
prompts/: base.md
prompts/languages/: go.md  python.md  shell.md  sql.md  typescript.md
prompts/roles/: backend.md  data_engineer.md  devops.md  frontend.md  security.md
scripts/: aws-sm-push.sh  aws-sm-run.sh
tasks/: docker.yaml  minion.yaml
